--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "server": "nodemon index.js",
     "rollback": "knex migrate:rollback",
     "migrate": "knex migrate:latest",
+    "seed": "knex seed:run",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
   },
   "repository": {
